added common response methods
