# internal/infrastructure/api/response/response.go
@@ -1,0 +1,31 @@
+package response
+
+import (
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+)
+
+func Ok(c *gin.Context, data any) {
+	c.JSON(http.StatusOK, data)
+}
+
+func BadRequest(c *gin.Context, err error) {
+	c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+}
+
+func NotFound(c *gin.Context, err error) {
+	c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+}
+
+func InternalServerError(c *gin.Context, err error) {
+	c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+}
+
+type ErrorResponse struct {
+	Error string `json:"error" example:"error message"`
+}
+
+type MessageResponse struct {
+	Message string `json:"message" example:"success message"`
+}
